feat: adicionando exemplos e configurações para docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,25 @@
+# ======================
 # Nome da aplicação
+# ======================
 spring.application.name=pipebot
 
-# Porta do servidor
-server.port=8081
+# Porta do servidor (pode vir do env ou padrão 8081)
+server.port=${SERVER_PORT:8081}
 
-# ---------------- MongoDB ----------------
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=pipebotdb
+# ======================
+# MongoDB Config
+# ======================
+spring.data.mongodb.host=${MONGO_HOST:localhost}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:pipebotdb}
+spring.data.mongodb.username=${MONGO_USER:}
+spring.data.mongodb.password=${MONGO_PASSWORD:}
 
-# Caso você use autenticação
-# spring.data.mongodb.username=seu_usuario
-# spring.data.mongodb.password=sua_senha
-
-# Configura logs detalhados de conexão (opcional)
+# Logs detalhados de conexão (opcional)
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-# Nome da aplicação e porta
-# CORS - URLs permitidas
-cors.allowed-origins.dev=http://localhost:8080
-cors.allowed-origins.prd=https://meusite.comrr
+
+# ======================
+# CORS Config
+# ======================
+cors.allowed-origins.dev=${CORS_DEV:http://localhost:8080}
+cors.allowed-origins.prd=${CORS_PRD:https://meusite.com}
