feat: configuração e ajustes application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,12 @@
-# ======================
-# Nome da aplicação
-# ======================
 spring.application.name=pipebot
-
-# Porta do servidor (pode vir do env ou padrão 8081)
 server.port=${SERVER_PORT:8081}
 
-# ======================
-# MongoDB Config
-# ======================
-spring.data.mongodb.host=${MONGO_HOST:localhost}
-spring.data.mongodb.port=${MONGO_PORT:27017}
-spring.data.mongodb.database=${MONGO_DB:pipebotdb}
-spring.data.mongodb.username=${MONGO_USER:}
-spring.data.mongodb.password=${MONGO_PASSWORD:}
+# Ativa perfil default = dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
-# Logs detalhados de conexão (opcional)
+# Logs Mongo
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
-# ======================
-# CORS Config
-# ======================
+# CORS
 cors.allowed-origins.dev=${CORS_DEV:http://localhost:8080}
 cors.allowed-origins.prd=${CORS_PRD:https://meusite.com}
