feat: configuração e ajustes application properties

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,30 @@
             <artifactId>docker-java</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <!-- Actuator: endpoints para health, info, metrics -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- Micrometer Prometheus Registry -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+        <!-- Opentelemetry para tracing distribuído com Jaeger -->
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-jaeger</artifactId>
+            <version>1.25.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+            <version>1.25.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.docker-java</groupId>
