--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 # CORS
 cors.allowed-origins.dev=${CORS_DEV:http://localhost:8080}
 cors.allowed-origins.prd=${CORS_PRD:https://meusite.com}
+
+# Expor métricas para Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
