feat: configuração e ajustes application properties

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
-# Mongo docker-compose
-spring.data.mongodb.host=${MONGO_HOST:mongodb}
+spring.data.mongodb.host=${MONGO_HOST:mongo-app}
 spring.data.mongodb.port=${MONGO_PORT:27017}
 spring.data.mongodb.database=${MONGO_DB:pipebotdb}
-spring.data.mongodb.username=${MONGO_USER:}
-spring.data.mongodb.password=${MONGO_PASSWORD:}
+spring.data.mongodb.username=${MONGO_USER:user}
+spring.data.mongodb.password=${MONGO_PASSWORD:password}
+spring.data.mongodb.authentication-database=admin
