--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,26 +4,28 @@ services:
     ports:
       - "8081:8081"
     environment:
-      SPRING_PROFILES_ACTIVE: docker         # ativa profile 'docker'
+      SPRING_PROFILES_ACTIVE: docker
       SERVER_PORT: 8081
       MONGO_HOST: mongo-app
-      MONGO_PORT: 27018
+      MONGO_PORT: 27017
       MONGO_DB: pipebotdb
       MONGO_USER: user
       MONGO_PASSWORD: password
       CORS_DEV: http://localhost:8080
-      CORS_PRD: https://meusite.com
+      CORS_PRD: http://localhost:8080
+      DOCKER_HOST: unix:///var/run/docker.sock
     depends_on:
       - mongo-app
       - prometheus
       - jaeger
       - grafana
     volumes:
-      - //./pipe/docker_engine://./pipe/docker_engine
+      - /var/run/docker.sock:/var/run/docker.sock
+
   mongo-app:
     image: mongo:6.0
     ports:
-      - "27018:27018"
+      - "27018:27017"
     environment:
       MONGO_INITDB_DATABASE: pipebotdb
       MONGO_INITDB_ROOT_USERNAME: user
